tests/ui/rfcs/rfc-1445-restrict-constants-in-patterns/match-requires-both-partialeq-and-eq.stderr
error: to use a constant of type `Foo` in a pattern, `Foo` must be annotated with `#[derive(PartialEq)]`
  --> $DIR/match-requires-both-partialeq-and-eq.rs:17:9
   |
LL | const FOO: Foo = Foo { x: 0 };
   | -------------- constant defined here
...
LL |         FOO => { }
   |         ^^^
   |
   = note: the traits must be derived, manual `impl`s are not sufficient
   = note: see https://doc.rust-lang.org/stable/std/marker/trait.StructuralPartialEq.html for details

error: aborting due to 1 previous error

